0.9.1(auto height on images to fix on ios deviceses)

--- a/Css/pathStuff.css
+++ b/Css/pathStuff.css
@@ -16,6 +16,7 @@
 .PathImages {
   display: flex;
   flex-direction: column;
+  height: auto;
 }
 
 .AllAtributes {
